nlp/nlp_hw1/v1.0/pytorch_src/logs/test_stage1_log_2019_10_27_03_30_48
  File "generate.py", line 116
    if args.cuda: input.cuda()
     ^
SyntaxError: invalid syntax
